# SpotifyCPP

./: CMakeLists.txt  README.md  library.json
docs/: Authentication.md  Exceptions.md  index.md  todo.md
docs/APIReference/: Client.md
docs/Auth/: Auth.md  AuthServer.md
docs/Tutorials/: Authentication.md  Exceptions.md  GettingStarted.md
docs/Types/: Auth.md  Scope.md  index.md
examples/: ExampleUtils.hpp  authManualExample.cpp  authServerExample.cpp  example.cpp
examples/audiobooks/: getAudiobookChapters.cpp  getAudiobookExample.cpp  getUserAudiobooksExample.cpp  removeAudiobookForUser.cpp  saveAudiobookForUser.cpp
examples/auth/: authManualExample.cpp  authServerExample.cpp  index.html
examples/browse/: getAvailableMarketsExample.cpp  searchExample.cpp
examples/endpoints/: ExampleUtils.hpp
examples/player/: currentTrackExample.cpp  playbackExample.cpp
examples/playlists/: createAndManipulatePlaylistExample.cpp  getCurrentUsersPlaylistsExample.cpp  getPlaylistCoverExample.cpp  getPlaylistExample.cpp  getPlaylistItemsExamples.cpp  getUsersPlaylistsExample.cpp
examples/realworld/: now_playing.cpp  search.cpp
include/spotify/: Auth.hpp  AuthServer.h  Client.hpp  SpotifyVersion.hpp  Tools.hpp  Types.h  extensions.hpp  spotify.hpp
src/: Auth.cpp  AuthServer.cpp  Client.cpp  Tools.cpp
src/api/: AlbumAPI.cpp  ArtistAPI.cpp  AudiobookAPI.cpp  BrowseAPI.cpp  CategoryAPI.cpp  ChapterAPI.cpp  EpisodeAPI.cpp  PlayerAPI.cpp  PlaylistAPI.cpp  UsersAPI.cpp
src/auth/: Auth.cpp  AuthServer.cpp
src/core/: Client.cpp
src/extensions/: VisualAPI.cpp
src/util/: Http.cpp  JsonMapping.cpp  Tools.cpp
(+27 files in other folders)
